--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "tls": "^0.0.1"
   },
   "dependencies": {
-    "@pantheon-systems/pcc-sdk-core": "^3.6.0",
+    "@pantheon-systems/pcc-sdk-core": "3.11.3",
     "axios": "^1.7.2",
     "google-auth-library": "^9.10.0",
     "postcss-prefix-selector": "^1.16.1"
