feat: add morphdom for dom diffing

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   },
   "require": {
     "php": ">=8",
-    "pantheon-systems/pcc-php-sdk": "dev-main"
+    "pantheon-systems/pcc-php-sdk": "dev-main",
+    "imangazaliev/didom": "^2.0"
   },
   "require-dev": {
     "wp-coding-standards/wpcs": "^3.1",
