test: add unit tests for ArticleOperations to validate post creation and updates

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ dist/
 pantheon-content-publisher.zip
 pantheon-content-publisher-wordpress.zip
 pantheon-content-publisher-for-wordpress.zip
+.phpunit.result.cache
+
