--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -28,7 +28,7 @@ jobs:
           tools: phpunit-polyfills
 
       - name: Setup test
-        run: bash bin/install-wp-tests.sh content_publisher_tests root root 127.0.0.1 latest true
+        run: bash bin/install-wp-tests.sh --dbname=content_publisher_tests --dbuser=root --dbpass=root --dbhost=127.0.0.1 --version=latest --tmpdir=/tmp
 
       - name: Run tests
         run: phpunit
