--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -18,17 +18,17 @@ jobs:
           - 3306:3306
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955
 
       - name: Setup PHP 8.4
-        uses: shivammathur/setup-php@v2
+        uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f
         with:
           php-version: "8.4"
           extensions: mysqli
           tools: phpunit-polyfills
 
       - name: Setup test
-        run: bash bin/install-wp-tests.sh --dbname=content_publisher_tests --dbuser=root --dbpass=root --dbhost=127.0.0.1 --version=latest --tmpdir=/tmp
+        run: bash bin/install-wp-tests.sh --dbname=content_publisher_tests --dbuser=root --dbpass=root --dbhost=127.0.0.1 --version=latest --tmpdir=/tmp --skip-db=true
 
       - name: Run tests
         run: phpunit
