--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -28,7 +28,10 @@ jobs:
         with:
           php-version: "8.4"
           extensions: mysqli
-          tools: phpunit-polyfills,wp-cli
+          tools: composer,phpunit-polyfills,wp-cli
+
+      - name: Generate Composer autoloader
+        run: composer dump-autoload -o
 
       - name: Setup test
         run: bash bin/install-wp-tests.sh --dbname=content_publisher_tests --dbuser=root --dbpass=root --dbhost=127.0.0.1 --version=latest --tmpdir=/tmp --skip-db=true
