--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -1,3 +1,4 @@
+name: WordPress.org Plugin Check
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
@@ -5,10 +6,30 @@ on: # rebuild any PRs and main branch changes
     - main
 
 jobs:
-  test:
+  validate:
+    name: Validate Plugin
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v5
+    - name: Setup PHP 8.4
+      uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f
+      with:
+        php-version: "8.4"
+        extensions: mysqli
+        tools: composer,wp-cli
+
+    - name: Cache Composer dependencies
+      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809
+      with:
+        path: |
+            ~/.composer/cache
+            vendor
+            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+            ${{ runner.os }}-composer-
+
+    - name: Install dependencies
+      run: composer install --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
     - name: Run plugin check
       uses: wordpress/plugin-check-action@v1
