--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v5
+      uses: actions/checkout@v08c6903cd8c0fde910a37f88322edcfb5dd907a8
     - name: Setup PHP 8.4
       uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f
       with:
@@ -32,4 +32,4 @@ jobs:
     - name: Install dependencies
       run: composer install --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
     - name: Run plugin check
-      uses: wordpress/plugin-check-action@v1
+      uses: wordpress/plugin-check-action@70f38272b2beee386e973f319591baa2fc7dff16
