--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
     - name: Setup PHP 8.4
-      uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f
+      uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f # v2.35.3
       with:
         php-version: "8.4"
         extensions: mysqli
         tools: composer,wp-cli
 
     - name: Cache Composer dependencies
-      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809
+      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
       with:
         path: |
             ~/.composer/cache
@@ -32,4 +32,4 @@ jobs:
     - name: Install dependencies
       run: composer install --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
     - name: Run plugin check
-      uses: wordpress/plugin-check-action@70f38272b2beee386e973f319591baa2fc7dff16
+      uses: wordpress/plugin-check-action@70f38272b2beee386e973f319591baa2fc7dff16 # 1.1.2
