--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
   "dependencies": {
     "@pantheon-systems/pcc-sdk-core": "3.11.3",
     "@pantheon-systems/pds-toolkit-react": "^1.0.0-dev.273",
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.7.2",
     "google-auth-library": "^9.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
     "react-router": "^7.8.2"
   }
 }
