Build composer assets
Co-authored-by: Phil Tyler <philip@tylerdigital.com>

--- a/.github/workflows/build-tag-release.yml
+++ b/.github/workflows/build-tag-release.yml
@@ -20,4 +20,5 @@ jobs:
           gh_token: ${{ github.token }}
           readme_md: README.md
           build_node_assets: true
+          build_composer_assets: true
           generate_release_notes: true
