[SITE-5305] Prepare wp-submission branch for merge with primary (#148)
* refactor: update code formatting and improve readability to resolve phpcs warnings
This reverts commit 3dfd2003cae5d91d73a03d2357832f10fb252f2e.
* fix: include draft posts in `findExistingConnectedPost` to fix duplicate posts being created issue
* feat: setup tests for plugin
* test: add unit tests for ArticleOperations to validate post creation and updates
* feat: add test workflow
* fix: correct test setup command in workflow
* fix: pin actions to specific version
* fix: add wp-cli to tools
* fix: specify explicit permissions for workflow
* fix: add Composer autoloader generation
* fix: update PHP test workflow to cache Composer dependencies and install them before running tests
* Remove debug step
* chore: update .gitignore to include bin directory
* [SITE-5158] Update name and zip file name (#126)
* [PCC 2314] Add default author assignment for new posts (#124)
* feat: add default author assignment for new posts and include WordPress tests stubs in dependencies
* feat: enhance default author assignment with `pcc_default_author_id` filter support
* refactor: update docblock for default author ID filter and fix codacy warning
* refactor: prefix unused param with _
* refactor: ignore unused parameter warning in test case
* feat: update metadata key used for featured image (#138)
* feat: update status endpoint to return collection id and compliant status data (#139)
* [PCC 2302] Updated FTUE UX (#140)
* feat: add initial base for React admin
- Introduced Vite configuration for building the React application.
- Added ESLint and Prettier configuration files for code quality and formatting.
- Updated package.json with necessary dependencies for React, TypeScript, ESLint, and Vite.
- Created initial React components and API client for admin interface.
- Established Tailwind CSS setup for styling.
* feat: add scoping of styles to prevent conflicts with admin styles
* feat: add landing view
* feat: ad

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 node_modules/
 vendor/
 dist/
+bin/
 .DS_Store
 *.code-workspace
 .idea
+pantheon-content-publisher-for-wordpress.zip
+pantheon-content-publisher-wordpress.zip
 pantheon-content-publisher.zip
+.phpunit.result.cache
