--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -35,7 +35,10 @@ jobs:
             ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
+      run: |
+        composer install --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
+        npm run build
+        npm run build:vite
       working-directory: pantheon-content-publisher
     - name: Run plugin check
       uses: wordpress/plugin-check-action@70f38272b2beee386e973f319591baa2fc7dff16 # 1.1.2
