--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -40,6 +40,7 @@ jobs:
 
     - name: Create Dist Archive for wp.org validation
       run: |
+        wp package install wp-cli/dist-archive-command
         wp dist-archive . --format=zip --create_targe=false --filename=pantheon-content-publisher-dist.zip
         unzip pantheon-content-publisher-dist.zip -d pantheon-content-publisher
 
