Fix missing build scripts on wp.org and increase version to 1.3.3 (#170)
* Fix missing build in wp.org by building to assets/build and update version to 1.3.3

* Remove unnecessary files from wp.org deploy

* rename contributing file

--- a/.distignore
+++ b/.distignore
@@ -27,4 +27,8 @@
 /webpack.mix.js
 /SECURITY.md
 /.distignore
-/LICENSE
+/.eslint.config.js
+/.prettierrc
+/phpunit.xml
+/tsconfig.json
+/vite.config.ts
