--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -8,9 +8,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  phpunit-84:
-    name: PHP 8.4 Unit Tests
+  phpunit:
+    name: PHP ${{ matrix.php-version }} Unit Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version: ["8.0", "8.1", "8.2", "8.3", "8.4", "8.5"]
     services:
       database:
         image: mysql:latest
@@ -23,10 +26,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955
 
-      - name: Setup PHP 8.4
+      - name: Setup PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@20529878ed81ef8e78ddf08b480401e6101a850f
         with:
-          php-version: "8.4"
+          php-version: ${{ matrix.php-version }}
           extensions: mysqli
           tools: composer,wp-cli
 
