Fix PHPCS violations and re-enable workflow

--- a/.github/workflows/php-style-lint.yml
+++ b/.github/workflows/php-style-lint.yml
@@ -10,5 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Skip
-        run: echo 'workflow broke - skip for PR checks'
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.4"
+          tools: composer
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.composer/cache
+            vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --no-interaction --no-progress --prefer-dist
+
+      - name: Run PHPCS
+        run: composer run php:lint:report
