--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -43,6 +43,17 @@ jobs:
         wp package install wp-cli/dist-archive-command
         wp dist-archive . --plugin-dirname=pantheon-content-publisher --filename-format=pantheon-content-publisher-dist
         unzip ../pantheon-content-publisher-dist.zip
+        echo "=== Contents of pantheon-content-publisher directory ==="
+        find pantheon-content-publisher -type f -name "*.php" | head -20
+        echo "=== Checking for tests directory ==="
+        if [ -d "pantheon-content-publisher/tests" ]; then
+          echo "ERROR: tests/ directory found in dist!"
+          ls -la pantheon-content-publisher/tests/
+        else
+          echo "OK: tests/ directory excluded from dist"
+        fi
+        echo "=== Checking PHP files for ABSPATH ==="
+        find pantheon-content-publisher -type f -name "*.php" -exec grep -L "defined.*ABSPATH" {} \; || true
 
     - name: Run plugin check
       uses: wordpress/plugin-check-action@6f5a57e173c065a394b78688f75df543e4011902 # 1.1.5
