--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -20,15 +20,7 @@ jobs:
       with:
         php-version: "8.4"
         extensions: mysqli
-        tools: composer
-
-    - name: Install WP-CLI (latest stable)
-      run: |
-        curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-        chmod +x wp-cli.phar
-        sudo mv wp-cli.phar /usr/local/bin/wp
-        wp --info
-        wp cli update --yes
+        tools: composer,wp-cli
 
     - name: Cache Composer dependencies
       uses: actions/cache@8b402f58fbc84540c8b491a91e594a4576fec3d7 # v5.0.2
@@ -45,11 +37,6 @@ jobs:
         composer install --no-dev --no-interaction --no-progress --prefer-dist --no-scripts --no-ansi
         npm ci
         npm run build
-
-    - name: Install WP-CLI framework globally for Composer
-      run: |
-        composer global config --no-plugins allow-plugins.wp-cli/wp-cli true
-        composer global require wp-cli/wp-cli-bundle
 
     - name: Create Dist Archive for wp.org validation
       run: |
