--- a/.github/workflows/wp-org-validator.yml
+++ b/.github/workflows/wp-org-validator.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Create Dist Archive for wp.org validation
       run: |
-        wp package install wp-cli/dist-archive-command:@stable
+        wp package install wp-cli/dist-archive-command:v3.1.0
         wp dist-archive . --plugin-dirname=pantheon-content-publisher --filename-format=pantheon-content-publisher-dist
         unzip ../pantheon-content-publisher-dist.zip
 
